Fix gallery caption not centered in the front-end issue

--- a/packages/block-library/src/gallery/style.scss
+++ b/packages/block-library/src/gallery/style.scss
@@ -1,3 +1,10 @@
+.wp-block-gallery {
+
+	figcaption {
+		flex-grow: 1;
+	}
+}
+
 .wp-block-gallery,
 .blocks-gallery-grid {
 	display: flex;
